# the-modern-cpp-challenge

./: .editorconfig  CMakeLists.txt  conanfile.txt
Chapter07/61/: CMakeLists.txt  main.cc
Chapter07/66/: CMakeLists.txt  main.cc
Chapter08/71/: CMakeLists.txt  observable_vector.h  observable_vector_test.cc
